--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,11 +43,11 @@
         "arr1"
       ],
       "metadata": {
-        "id": "5lA8mbM88Ojq",
-        "outputId": "a1eafbce-ba8e-4ea5-9922-ded542d8798c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5lA8mbM88Ojq",
+        "outputId": "a1eafbce-ba8e-4ea5-9922-ded542d8798c"
       },
       "execution_count": 3,
       "outputs": [
@@ -128,11 +129,11 @@
         "arr4"
       ],
       "metadata": {
-        "id": "LI4I3OpUAeDK",
-        "outputId": "d353604d-8b75-463f-8d0d-3a2a8db631d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LI4I3OpUAeDK",
+        "outputId": "d353604d-8b75-463f-8d0d-3a2a8db631d8"
       },
       "execution_count": 9,
       "outputs": [
@@ -159,11 +160,11 @@
         "arr5"
       ],
       "metadata": {
-        "id": "7MeCTIdDAd_y",
-        "outputId": "80e47ac8-c42b-4f1f-a074-c180f5a5258a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7MeCTIdDAd_y",
+        "outputId": "80e47ac8-c42b-4f1f-a074-c180f5a5258a"
       },
       "execution_count": 10,
       "outputs": [
@@ -189,11 +190,11 @@
         "arr6"
       ],
       "metadata": {
-        "id": "CYAYcs4AAd80",
-        "outputId": "4c5607e8-18cd-4bac-b969-1437fde792db",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CYAYcs4AAd80",
+        "outputId": "4c5607e8-18cd-4bac-b969-1437fde792db"
       },
       "execution_count": 11,
       "outputs": [
@@ -216,10 +217,116 @@
     {
       "cell_type": "code",
       "source": [
-        "arr7=np."
+        "arr7=np.arange(12)\n",
+        "arr7"
       ],
       "metadata": {
-        "id": "D5X90GNZAd5n"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D5X90GNZAd5n",
+        "outputId": "b80723b2-f668-474b-872c-28f9b74a2ea8"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr7=np.arange(12,20)\n",
+        "arr7"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lXrjHPamAdoG",
+        "outputId": "7bb8a342-5d57-434c-cb11-2790eb7aae14"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([12, 13, 14, 15, 16, 17, 18, 19])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr7=np.arange(20,50,5)\n",
+        "arr7"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E3LnMnByAdkw",
+        "outputId": "9c8161ee-0885-4c69-f5fb-320cc1cb25ee"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([20, 25, 30, 35, 40, 45])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr8=arr7.copy()\n",
+        "arr8"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yKqDjLnrEPT6",
+        "outputId": "ac89d43a-8cdd-4923-a54a-41722dc0b492"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([20, 25, 30, 35, 40, 45])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Y8zg_EqkEPQZ"
       },
       "execution_count": null,
       "outputs": []
@@ -228,7 +335,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "lXrjHPamAdoG"
+        "id": "YDXeSMuUEPNT"
       },
       "execution_count": null,
       "outputs": []
@@ -237,7 +344,43 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "E3LnMnByAdkw"
+        "id": "seO28I_YEPKR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VLEst-iSEPGq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "UGpeHQ-DEPD_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Blf0dn-FEPBR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0MAhbehCEO-x"
       },
       "execution_count": null,
       "outputs": []
