--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -28,296 +28,85 @@
         "id": "LtmMnLUG0U6L"
       },
       "cell_type": "code",
+      "source": [],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "iH1oEngB02Zv"
+      },
+      "cell_type": "code",
       "source": [
-        "import numpy as np"
+        "!pip install --upgrade -q gspread"
       ],
-      "execution_count": 2,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "XKxzbrsy1Ulk"
+      },
+      "cell_type": "code",
+      "source": [
+        "!pip install --upgrade -q gspread"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "6UbkNzJn1Um3"
+      },
+      "cell_type": "code",
+      "source": [],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# New Section"
+      ],
+      "metadata": {
+        "id": "CLE9L8iUeKpX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "4IstfqOweZ2T"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# 1d array\n",
-        "arr1=np.array([1,2,3,4,])\n",
-        "arr1"
+        "arr11=np.arange(24).reshape(4,6)\n",
+        "arr11"
       ],
       "metadata": {
+        "id": "1jOl23TTfbdx",
+        "outputId": "c7e3d4a0-4c75-4275-b84a-805d149582cf",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5lA8mbM88Ojq",
-        "outputId": "a1eafbce-ba8e-4ea5-9922-ded542d8798c"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([1, 2, 3, 4])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
+          "base_uri": "https://localhost:8080/",
+          "height": 164
         }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "iH1oEngB02Zv",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "8616d5bf-d992-4fb2-df22-66755d2a6a38"
       },
-      "cell_type": "code",
-      "source": [
-        "#2d arraay\n",
-        "arr2=np.array([[1,2,3],[4,5,6]])\n",
-        "arr2"
-      ],
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[1, 2, 3],\n",
-              "       [4, 5, 6]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 5
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "XKxzbrsy1Ulk",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3bd4eefb-6df0-4659-ddc3-bbba44837532"
-      },
-      "cell_type": "code",
-      "source": [
-        "#3d arraay\n",
-        "arr3=np.array([[1,2,3,],[4,5,6],[7,8,9]])\n",
-        "arr3"
-      ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[1, 2, 3],\n",
-              "       [4, 5, 6],\n",
-              "       [7, 8, 9]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr4=np.array([[[1,2,3],[4,5,6]],[[7,8,9],[3,5,6]]])\n",
-        "arr4"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "LI4I3OpUAeDK",
-        "outputId": "d353604d-8b75-463f-8d0d-3a2a8db631d8"
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[[1, 2, 3],\n",
-              "        [4, 5, 6]],\n",
-              "\n",
-              "       [[7, 8, 9],\n",
-              "        [3, 5, 6]]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 9
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr5=np.zeros((4,3))\n",
-        "arr5"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7MeCTIdDAd_y",
-        "outputId": "80e47ac8-c42b-4f1f-a074-c180f5a5258a"
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[0., 0., 0.],\n",
-              "       [0., 0., 0.],\n",
-              "       [0., 0., 0.],\n",
-              "       [0., 0., 0.]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr6=np.ones((5,4))\n",
-        "arr6"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CYAYcs4AAd80",
-        "outputId": "4c5607e8-18cd-4bac-b969-1437fde792db"
-      },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[1., 1., 1., 1.],\n",
-              "       [1., 1., 1., 1.],\n",
-              "       [1., 1., 1., 1.],\n",
-              "       [1., 1., 1., 1.],\n",
-              "       [1., 1., 1., 1.]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 11
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr7=np.arange(12)\n",
-        "arr7"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "D5X90GNZAd5n",
-        "outputId": "b80723b2-f668-474b-872c-28f9b74a2ea8"
-      },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 12
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr7=np.arange(12,20)\n",
-        "arr7"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lXrjHPamAdoG",
-        "outputId": "7bb8a342-5d57-434c-cb11-2790eb7aae14"
-      },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([12, 13, 14, 15, 16, 17, 18, 19])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 13
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr7=np.arange(20,50,5)\n",
-        "arr7"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "E3LnMnByAdkw",
-        "outputId": "9c8161ee-0885-4c69-f5fb-320cc1cb25ee"
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([20, 25, 30, 35, 40, 45])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 16
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr8=arr7.copy()\n",
-        "arr8"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "yKqDjLnrEPT6",
-        "outputId": "ac89d43a-8cdd-4923-a54a-41722dc0b492"
-      },
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([20, 25, 30, 35, 40, 45])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 17
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'np' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-9b564fd6a55f>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0marr11\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m24\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0marr11\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+          ]
         }
       ]
     },
@@ -325,7 +114,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Y8zg_EqkEPQZ"
+        "id": "Kaovnq3ifbaY"
       },
       "execution_count": null,
       "outputs": []
@@ -334,7 +123,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "YDXeSMuUEPNT"
+        "id": "H8ClqlOtfbWf"
       },
       "execution_count": null,
       "outputs": []
@@ -343,7 +132,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "seO28I_YEPKR"
+        "id": "FafhjzSJfbT6"
       },
       "execution_count": null,
       "outputs": []
@@ -352,7 +141,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "VLEst-iSEPGq"
+        "id": "2M7b3QbdfbRZ"
       },
       "execution_count": null,
       "outputs": []
@@ -361,7 +150,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "UGpeHQ-DEPD_"
+        "id": "kxHKy3kTfbPK"
       },
       "execution_count": null,
       "outputs": []
@@ -370,7 +159,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Blf0dn-FEPBR"
+        "id": "YhSSIgJDfbL7"
       },
       "execution_count": null,
       "outputs": []
@@ -379,7 +168,34 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "0MAhbehCEO-x"
+        "id": "GbGoX1V6fbGm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "WyO9PR4ffbEI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Yp2I8BYKfbB8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KrdM2a4Afa_U"
       },
       "execution_count": null,
       "outputs": []
